--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   overflow: hidden;
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'Press Start 2P', monospace;
   background-color: #000;
 }
 
